# vulkan-test

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  nvidia.supp
client/: CMakeLists.txt  main.cpp
client/glfw/: glfw.cpp  glfw.hpp  glfwInit.cpp  glfwInit.hpp
client/glfw/app/: app.cpp  app.hpp
client/glfw/window/: window.cpp  window.hpp
client/utils/printTable/: printTable.cpp  printTable.hpp
client/vulkan/: VulkanDebugger.cpp  VulkanDebugger.hpp  vulkan.cpp  vulkan.hpp  vulkanDebugger.cpp  vulkanDebugger.hpp  vulkanDevice.cpp  vulkanDevice.hpp  vulkanDevice_property.cpp  vulkanInit.cpp  vulkanInit.hpp
lib/utils/: CMakeLists.txt  debug.hpp
lib/utils/available/: available.hpp
lib/utils/format/: ansi.cpp  ansi.hpp  logtime.cpp  logtime.hpp  string.cpp  string.hpp  table.cpp  table.hpp
lib/vulkan/: CMakeLists.txt
lib/vulkan/api/: api.cpp  api.hpp  api_info.hpp
lib/vulkan/debugger/: debugger.cpp  debugger.hpp  debugger_deleter.hpp
lib/vulkan/device/: device.cpp  device.hpp  device_data.hpp  queue.cpp  queue.hpp
lib/vulkan/init_glfw/: init.cpp  init.hpp
lib/vulkan/init_vulkan/: init.cpp  init.hpp  init_info.hpp
lib/vulkan/surface/: surface.cpp  surface.hpp  surface_deleter.hpp
lib/vulkan/utils/: getFunc.hpp
lib/vulkan/window/: surface_deleter.hpp  window.cpp  window.hpp  window_info.hpp
